--- a/Thermal_Images_Training2.ipynb
+++ b/Thermal_Images_Training2.ipynb
@@ -13,7 +13,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Treinamento com o dataset Thermal Images of small-WTB - Pasta Training - e o dataset desenvolvido - Pasta Negative"
+        "Treinamento 2 com o dataset Thermal Images of small-WTB - Pasta Training - e o dataset desenvolvido - Pasta Negative"
       ],
       "metadata": {
         "id": "QKSGn13vQ5w1"
