Update and rename Small_Wind_Turbine_Blade.ipynb to Small_Wind_Turbine_Blade2.ipynb

--- a/Small_Wind_Turbine_Blade2.ipynb
+++ b/Small_Wind_Turbine_Blade2.ipynb
@@ -16,7 +16,7 @@
         "id": "VpfAq_3AqbLm"
       },
       "source": [
-        "1. Importação das bibliotecas"
+        "1. Importação das bibliotecas // Treinamwnto com índice de Paciencia 10"
       ]
     },
     {
