--- a/wind_Turbine/Small_Wind_Turbine_Blade.ipynb
+++ b/wind_Turbine/Small_Wind_Turbine_Blade.ipynb
@@ -875,7 +875,7 @@
       "source": [
         "# save model structure in jason file\n",
         "model_json = model.to_json()\n",
-        "with open(\"emotion_model.json\", \"w\") as json_file:\n",
+        "with open(\"CAImodel.json\", \"w\") as json_file:\n",
         "    json_file.write(model_json)"
       ]
     },
