--- a/crack_thermal_detection/COBEM/CAI_SWTB_3.ipynb
+++ b/crack_thermal_detection/COBEM/CAI_SWTB_3.ipynb
@@ -1,4 +1,15 @@
 {
+      "cell_type": "markdown",
+      "source": [
+        "Treinamentos dos modelos com dataset selecionado - somente Fissuras - CNN e U-Net"
+      ],
+      "metadata": {
+        "id": "rmcUEXYZcBif"
+      }
+    },
+
+
+{
   "cells": [
     {
       "cell_type": "markdown",
